core-plugins/src/test/resources/scraper/plugins/core/typechecker/ok/mapjoin.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoin
      list: [A,B]
      mapTarget: X
      keys:
        key: keyfromx

    - type: StringContains
      regex: ""
      content: "{{keyfromx}}[0]" # content :: String

  X:
    - type: Echo
      put: key
      value: "1"


