core-plugins/src/test/resources/scraper/plugins/core/typechecker/fail/mapjoin5.yf
---
name: mapjoin
graphs:
  start:
    - type: MapJoin
      list: [["A"], ["B"]]
      mapTarget: X
      putElement: "element"
      keys: {}

  X:
    - type: StringContains
      regex: ""
      content: "{element}"


